# gq-pointcloud

./: .dockerignore  .gitignore  Dockerfile.test  LICENSE  README.md  README_macos.md  README_windows.md  cli.py  main.py  pyproject.toml  setup_windows.bat
lib/: filter.py
packaging/: pdal_filter.spec  pdal_filter.wxs  pdal_filter_linux.spec  pdal_filter_macos.spec
scripts/: build_all.sh  build_linux.sh  build_macos.sh  build_msi.ps1  build_windows.bat  build_windows.ps1
tests/: test_filter.py
